--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
-    "@ionic-native/facebook": "^5.0.0",
     "@ionic-native/geolocation": "^5.0.0",
     "@ionic-native/google-maps": "^5.0.0-beta.26",
-    "@ionic-native/google-plus": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.0",
@@ -32,16 +30,18 @@
     "angularfire2": "^5.1.1",
     "cordova-android": "^7.1.4",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-facebook4": "4.1.0",
+    "cordova-plugin-firebase-authentication": "1.0.1",
     "cordova-plugin-geolocation": "4.0.1",
-    "cordova-plugin-googleplus": "7.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-support-android-plugin": "1.0.1",
+    "cordova-support-google-services": "1.2.1",
     "core-js": "^2.5.4",
     "firebase": "^5.8.1",
+    "promise-polyfill": "8.1.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
@@ -83,14 +83,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-googleplus": {
-        "PLAY_SERVICES_VERSION": "11.8.0"
-      },
-      "cordova-plugin-facebook4": {
-        "APP_ID": "401563483744236",
-        "APP_NAME": "weather-app",
-        "FACEBOOK_HYBRID_APP_EVENTS": "false",
-        "FACEBOOK_ANDROID_SDK_VERSION": "4.38.1"
+      "cordova-plugin-firebase-authentication": {
+        "FIREBASE_AUTH_VERSION": "16.0.+"
       }
     },
     "platforms": [
